Revision history for {{$dist->name}}

{{$NEXT}}

0.004     2015-01-19 03:49:55Z
          - avoid dying if [OurPkgVersion] is not installed
          - accomodate older [RewriteVersion], before skip_version_provider
            was added
          - accomodate the use of all [RewriteVersion] configuration options

0.003     2015-01-17 03:55:55Z
          - include the configs for the fallback_version_provider,
            [PkgVersion] and/or [OurPkgVersion], when used, in dumped
            configs
          - avoid misleading log messages when nothing was actually modified
            in the file

0.002     2015-01-13 06:06:52Z
          - first working version

0.001     2014-12-31 20:55:07Z (TRIAL RELEASE)
          - Initial release.