@@ -79,8 +79,8 @@ is(
 cmp_deeply(
     $tzil->log_messages,
     superbagof(
-        '[RewriteVersion::Transitional] inserting $VERSION assignment into lib/Foo.pm',
-        '[BumpVersionAfterRelease::Transitional] inserting $VERSION assignment into ' . path($tzil->tempdir, qw(source lib Foo.pm)),
+        '[RewriteVersion::Transitional] inserted $VERSION statement into lib/Foo.pm',
+        '[BumpVersionAfterRelease::Transitional] inserted $VERSION statement into ' . path($tzil->tempdir, qw(source lib Foo.pm)),
 
     ),
     'got appropriate log messages about inserting new $VERSION statement into Foo',
@@ -88,7 +88,7 @@ cmp_deeply(
 
 ok(
     ! grep {
-        m{^\[(RewriteVersion|BumpVersionAfterRelease)::Transitional\] inserting \$VERSION assignment into .*Bar.pm$}
+        m{^\[(RewriteVersion|BumpVersionAfterRelease)::Transitional\] inserted \$VERSION statement into .*Bar.pm$}
     } @{ $tzil->log_messages },
     'did not log a message about inserting a $VERSION statement into private Foo::Bar',
 );
