@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - now logging the number of version statements that were replaced
 
 0.004     2015-01-19 03:49:55Z
           - avoid dying if [OurPkgVersion] is not installed
